fixed badge alignment

--- a/assets/css/sass/blocks/_badges.scss
+++ b/assets/css/sass/blocks/_badges.scss
@@ -90,7 +90,7 @@
             @extend .u-bg-dark-gray;
             padding: 1rem 3rem;
             width: fit-content;
-            height: auto;
+            bottom: initial;
             margin: 0 auto;
         }
 
